# UbuntuairLab_Backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  check_conflicts.py  docker-compose.prod.yml  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  seed_data.py  setup_local_db.md
.github/workflows/: azure-deploy.yml  main_ubuntuairlab.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_flight_parking_link.py  003_seed_parking_spots.py  004_add_realtime_tracking.py  224fabeff6de_add_conflict_columns_to_parking_.py  2f8594308d71_add_updated_at_to_parking_allocations.py  31a3fa5724ea_convert_parking_columns_to_enum.py  5cee32faada4_add_military_parking_spots.py
app/: database.py  main.py
app/api/v1/: router.py
app/core/: config.py  logging.py  metrics.py
app/exceptions/: __init__.py  custom_exceptions.py
app/models/: flight.py  notification.py  parking.py  prediction.py  turnaround.py  user.py
app/repositories/: flight_repository.py  notification_repository.py  parking_repository.py  prediction_repository.py  turnaround_repository.py  user_repository.py
app/schemas/: ai_models.py  auth.py  aviationstack.py  flight.py  opensky.py  parking.py  prediction.py
app/services/ai_models/: base.py  (+4 more)
app/utils/: __init__.py  decorators.py  geo_calculator.py
docs/: API_INTEGRATION.md  ARCHITECTURE.md  AZURE_DEPLOYMENT.md  FRONTEND_INTEGRATION.md  ubuntuairlab_diagramme_flux.mermaid
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/azure/: README.md  deploy-full.ps1
(+18 files in other folders)
